tests/golden/type_errors/lambda_return_assignment_type_mismatch.cd
let make = fun () {
  return 42;
};
let n = make();
n = true;
